# rust-wordpress

./: .dockerignore  Cargo.toml  Dockerfile  convertToMD.py  docker-compose.debug.yml
.github/workflows/: runner.yml
config/: main.json
report/: report.html
src/: auth.rs  config.rs  main.rs
