[package]
name = "rust-wordpress"
version = "0.1.0"
authors = ["Mohamed Hassanin <mhassani@mathworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
# completable_future = "0.2.0"